image dossier et mise en page homeLayout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">WereWolfApp</string>
+    <string name="accueil">Accueil</string>
+    <string name="creer_une_partie">Créer une partie</string>
+    <string name="rejoindre">Rejoindre</string>
+    <string name="nombre_de_joueurs">Nombre de joueurs: -  4  +</string>
+    <string name="nom_de_la_partie">nom de la partie</string>
 </resources>
