--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,16 @@
     <string name="rejoindre">Rejoindre</string>
     <string name="nombre_de_joueurs">Nombre de joueurs</string>
     <string name="nom_de_la_partie">nom de la partie</string>
-    <string name="sign_in">Sign In</string>
-    <string name="sign_up">Sign Up</string>
+
+
+    <string name="login">Connexion</string>
+    <string name="sign_in">Se connecter</string>
+    <string name="sign_up">Inscription</string>
+
     <string name="adresse_mail">Adresse mail</string>
     <string name="password">Password</string>
+
+
     <string name="launcher">Launcher</string>
     <string name="bouton_retour">Bouton retour</string>
     <string name="bouton_de_deconnexion">bouton de deconnexion</string>
