--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="commencer">Commencer !</string>
     <string name="exclure">Exclure</string>
     <string name="hello_blank_fragment">yoh</string>
+    <string name="touchez_pour_commencer">Touchez pour commencer</string>
 </resources>
