--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="exclure">Exclure</string>
     <string name="hello_blank_fragment">yoh</string>
     <string name="touchez_pour_commencer">Touchez pour commencer</string>
+    <string name="close_your_eyes">Close Your Eyes</string>
 </resources>
