--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="sign_up">Inscription</string>
 
     <string name="adresse_mail">Adresse mail</string>
-    <string name="password">Password</string>
+    <string name="password">Mot de passe</string>
 
 
     <string name="launcher">Launcher</string>
