--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="hello_blank_fragment">yoh</string>
     <string name="touchez_pour_commencer">Touchez pour commencer</string>
     <string name="close_your_eyes">Close Your Eyes</string>
+    <string name="pseudo">Pseudo</string>
+    <string name="sauvegarder">Sauvegarder</string>
 </resources>
