chasseur Fragment finished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="close_your_eyes">Close Your Eyes</string>
     <string name="pseudo">Pseudo</string>
     <string name="sauvegarder">Sauvegarder</string>
+    <string name="tirer">Tirer</string>
 </resources>
