voyante Fragment finished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="pseudo">Pseudo</string>
     <string name="sauvegarder">Sauvegarder</string>
     <string name="tirer">Tirer</string>
+    <string name="observer">Observer</string>
 </resources>
