--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="sauvegarder">Sauvegarder</string>
     <string name="tirer">Tirer</string>
     <string name="observer">Observer</string>
+    <string name="est">est</string>
 </resources>
