--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="observer">Observer</string>
     <string name="est">est</string>
     <string name="Resume_debut">• Pour les Villageois : éliminer les Loups-garous.\n
-        • Pour les Loups-garous : éliminer les Villageois</string>
+        • Pour les Loups-garous : éliminer les Villageois
+    </string>
     <string name="selectionnez_un_joueur">Selectionnez un joueur</string>
 </resources>
