--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="votre_carte_n_est">Votre carte est ...</string>
     <string name="textview">TextView</string>
     <string name="pseudo">Pseudo</string>
+    <string name="liste_des_morts">Liste des morts</string>
 </resources>
