--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="textview">TextView</string>
     <string name="pseudo">Pseudo</string>
     <string name="liste_des_morts">Liste des morts</string>
+    <string name="selectionnez_deux_amoureux">Selectionnez deux amoureux</string>
 </resources>
