--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="pseudo">Pseudo</string>
     <string name="liste_des_morts">Liste des morts</string>
     <string name="selectionnez_deux_amoureux">Selectionnez deux amoureux</string>
+    <string name="_5">5</string>
 </resources>
