Last Commit For Project (for real this time)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,5 @@
     <string name="carte_player_selected">Carte player selected</string>
     <string name="_5">5</string>
     <string name="carte_joueur">Carte Joueur</string>
+    <string name="_40">40</string>
 </resources>
